--- a/www/index.html
+++ b/www/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta http-equiv="Content-type" content="text/html; charset=utf-8"/>
-        <title>My awesome Rust, WebAssembly, and Webpack application</title>
+        <title>Bomberman in Rust and Wasm</title>
         <style>
         body {
             position: absolute;
@@ -18,6 +18,6 @@
         </style>
     </head>
     <body>
-        <pre id="game-of-life-canvas"></pre>
+        <canvas id="game-canvas"></div>
     </body>
 </html>
