Created game loop, added player movement and bombs

--- a/www/index.html
+++ b/www/index.html
@@ -15,6 +15,9 @@
             align-items: center;
             justify-content: center;
         }
+        #game-canvas {
+            border: 1px solid black;
+        }
         </style>
     </head>
     <body>
